# python-lokalise-api

./: .env.sample  .gitignore  .readthedocs.yml  .travis.yml  CHANGELOG.md  LICENSE  MANIFEST.in  Pipfile  README.md  pyproject.toml  setup.cfg  setup.py
.github/: CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/workflows/: ci.yml
docs/: conf.py  index.rst  requirements.txt
docs/_static/css/: custom.css
docs/_templates/: globaltoc.html  links.html
docs/additional_info/: changelog.rst  contributing.rst  exception_handling.rst  license.rst  manipulating_client.rst  oauth2_flow.rst
docs/api/: audit_logs.rst  branches.rst  comments.rst  contributors.rst  files.rst  getting_started.rst  glossary_terms.rst  jwt.rst  keys.rst  languages.rst  orders.rst  payment_cards.rst  permission_templates.rst  projects.rst  queued_processes.rst  screenshots.rst  segments.rst  snapshots.rst  tasks.rst  team_user_billing_details.rst  team_user_groups.rst  team_users.rst  teams.rst  translation_providers.rst  translation_statuses.rst  translations.rst  webhooks.rst
docs/general_info/: getting_started.rst
lokalise/: __init__.py  _version.py  base_client.py  client.py  client_v1.py  errors.py  oauth_client.py  request.py  request_utils.py  types.py  utils.py
lokalise/client_methods/: branches.py  comments.py  contributors.py  endpoint_provider.py  files.py  glossary_terms.py  jwt.py  keys.py  languages.py  orders.py  payment_cards.py  permission_templates.py  processes.py  projects.py  screenshots.py  segments.py  snapshots.py  tasks.py  team_user_billing_details.py  team_user_groups.py  team_users.py  teams.py  translation_providers.py  translation_statuses.py  translations.py  webhooks.py
lokalise/client_methods/v1/: audit_logs.py
lokalise/collections/: base_collection.py  branches.py  comments.py  contributors.py  files.py  glossary_terms.py  keys.py  languages.py  orders.py  payment_cards.py  permission_templates.py  projects.py  queued_processes.py  screenshots.py  segments.py  snapshots.py  tasks.py  team_user_groups.py  team_users.py  teams.py  translation_providers.py  translation_statuses.py  translations.py  webhooks.py
lokalise/collections/v1/: audit_logs.py  base_collection.py
lokalise/endpoints/: __init__.py  base.py  base_endpoint.py  branches_endpoint.py  contributors_endpoint.py  files_endpoint.py  glossary_terms_endpoint.py  jwt_endpoint.py  key_comments_endpoint.py  keys_endpoint.py  languages_endpoint.py  orders_endpoint.py  payment_cards_endpoint.py  permission_templates_endpoint.py  project_comments_endpoint.py  projects.py  projects_endpoint.py  queued_processes_endpoint.py  screenshots_endpoint.py  segments_endpoint.py  snapshots_endpoint.py  system_languages_endpoint.py  tasks_endpoint.py  team_user_billing_details_endpoint.py  team_user_groups_endpoint.py  team_users_endpoint.py  teams_endpoint.py  translation_providers_endpoint.py  translation_statuses_endpoint.py  translations_endpoint.py  webhooks_endpoint.py
lokalise/endpoints/v1/: audit_logs_endpoint.py
lokalise/models/: __init__.py  base_model.py  branch.py  comment.py  contributor.py  file.py  glossary_term.py  jwt.py  key.py  language.py  order.py  payment_card.py  permission_template.py  project.py  queued_process.py  screenshot.py  segment.py  snapshot.py  task.py  team.py  team_user.py  team_user_billing_details.py  team_user_group.py  translation.py  translation_provider.py  translation_status.py  webhook.py
lokalise/models/v1/: audit_log.py
lokalise/oauth2/: auth.py  request.py
tests/: conftest.py  request_test.py  sample_test.py
tests/cassettes/: test_all_projects.yaml  test_all_projects_pagination.yaml  test_it.yaml  test_project.yaml  test_project_to_string.yaml
tests/cassettes/audit_logs_test/: test_audit_logs.yaml  test_audit_logs_with_invalid_cursor.yaml  test_audit_logs_with_params.yaml
tests/cassettes/auth_test/: test_refresh.yaml  test_token.yaml  test_token_error.yaml
tests/cassettes/branches_test/: test_all_branches.yaml  test_all_branches_pagination.yaml  test_branch.yaml  test_branch_to_str.yaml  test_create_branch.yaml  test_delete_branch.yaml  test_merge_branch.yaml  test_update_branch.yaml
tests/cassettes/client_setup_test/: test_client_compression.yaml  test_client_no_compression.yaml  test_client_timeout.yaml  test_reset_client.yaml
tests/cassettes/comments_test/: test_create_key_comment.yaml  test_create_key_comments.yaml  test_delete_key_comment.yaml  test_key_comment.yaml  test_key_comments.yaml  test_key_comments_pagination.yaml  test_project_comments.yaml  test_project_comments_pagination.yaml
tests/cassettes/contributors_test/: test_all_contributors.yaml  test_all_contributors_pagination.yaml  test_contributor.yaml  test_contributor_to_string.yaml  test_create_contributor.yaml  test_create_contributors.yaml  test_current_contributor.yaml  test_delete_contributor.yaml  test_update_contributor.yaml
tests/cassettes/errors_test/: test_errors.yaml  test_invalid_client.yaml  test_no_error_key.yaml  test_not_found.yaml  test_unknown_error.yaml
tests/cassettes/files_test/: test_delete_file.yaml  test_download_files.yaml  test_download_files_async.yaml  test_download_files_too_big.yaml  test_files.yaml  test_files_pagination.yaml  test_upload_file.yaml
tests/cassettes/jwt_test/: test_jwt.yaml
tests/client/: branches_test.py  client_setup_test.py  comments_test.py  contributors_test.py  errors_test.py  files_test.py  glossary_terms_test.py  jwt_test.py  keys_test.py  languages_test.py  oauth_client_setup_test.py  orders_test.py  payment_cards_test.py  permission_templates_test.py  projects_test.py  queued_processes_test.py  screenshots_test.py  segments_test.py  snapshots_test.py  tasks_test.py  team_user_billing_details_test.py  team_user_groups_test.py  team_users_test.py  teams_test.py  translation_providers_test.py  translation_statuses_test.py  translations_test.py  webhooks_test.py
tests/fixtures/: screenshot_base64.txt
tests/oauth2/: auth_test.py  request_test.py
typings/lokalise/: __init__.pyi  errors.pyi
(+164 files in other folders)
