[project]
name = "python-lokalise-api"
version = "3.4.0"
description = "Official Python interface for the Lokalise API v2"
authors = [
    {name = "Ilya Krukowski", email = "golosizpru@gmail.com"}
]
readme = "README.md"
license = "BSD-3-Clause"
repository = "https://github.com/lokalise/python-lokalise-api"
documentation = "https://python-lokalise-api.readthedocs.io/"
keywords = ["lokalise", "api", "client"]
classifiers=[
    'Development Status :: 5 - Production/Stable',
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
]

requires-python = ">=3.9"

dependencies = [
    "requests (>=2.32.0,<3.0.0)",
    "exceptiongroup (>=1.0,<2.0) ; python_version < '3.11'"
]

[project.urls]
homepage = "https://python-lokalise-api.readthedocs.io/"
repository = "https://github.com/lokalise/python-lokalise-api/issues"


[tool.poetry]

packages = [
    { include = "lokalise" }
]

[tool.poetry.group.dev.dependencies]
pytest = "^8.3"
vcrpy = "^7.0"
pytest-vcr = "^1.0.2"
pytest-cov = "^6.0"
pylint = "^3.3"
pytest-pylint = "^0.21"
mypy = "^1.7"
python-dotenv = "^1.0"
autopep8 = "^2.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = "tests"
norecursedirs = ".git .github tmp* .eggs bin build include lib share src lokalise docs"
addopts = "-s --cov=lokalise --cov-report html --cov-report=term --pylint"

[tool.pylint.MASTER]
min-public-methods="0"
min-similarity-lines="5"
disable="R0901"