[project]
name = "python-lokalise-api"
version = "3.5.1"
description = "Official Python interface for the Lokalise API v2"
authors = [
    {name = "Ilya Krukowski", email = "golosizpru@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.9"
keywords = ["lokalise", "api", "client"]
classifiers=[
    'Development Status :: 5 - Production/Stable',
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
]
dependencies = [
    "exceptiongroup>=1.0,<2.0 ; python_version < '3.11'",
    "requests>=2.32.5,<3",
]

[project.urls]
Homepage = "https://python-lokalise-api.readthedocs.io/"
Repository = "https://github.com/lokalise/python-lokalise-api"
Issues = "https://github.com/lokalise/python-lokalise-api/issues"
Documentation = "https://python-lokalise-api.readthedocs.io/"

[dependency-groups]
dev = [
    "autopep8>=2.3.2",
    "mypy>=1.18.2",
    "pylint>=3.3.8",
    "pytest>=8.4.2",
    "pytest-cov>=7.0.0",
    "pytest-pylint>=0.21.0",
    "pytest-vcr>=1.0.2",
    "python-dotenv>=1.1.1",
    "types-requests>=2.31.0.6",
    "vcrpy>=7.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["lokalise"]

[tool.pytest.ini_options]
testpaths = "tests"
norecursedirs = ".git .github tmp* .eggs bin build include lib share src lokalise docs"
addopts = "-s --cov=lokalise --cov-report html --cov-report=term --pylint"

[tool.pylint.MASTER]
min-public-methods = "0"
min-similarity-lines = "5"

[tool.pylint."MESSAGES CONTROL"]
disable = ["R0901"]
