[project]
name = "python-lokalise-api"
version = "4.0.1"
description = "Official Python interface for the Lokalise API v2"
authors = [
    {name = "Ilya Krukowski", email = "elskruk@proton.me"}
]
readme = "README.md"
requires-python = ">=3.10"
keywords = ["lokalise", "api", "client"]
classifiers=[
    'Development Status :: 5 - Production/Stable',
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
]
dependencies = [
    "exceptiongroup>=1.0,<2.0 ; python_version < '3.11'",
    "requests>=2.32.5,<3",
]

[project.urls]
Homepage = "https://python-lokalise-api.readthedocs.io/"
Repository = "https://github.com/lokalise/python-lokalise-api"
Issues = "https://github.com/lokalise/python-lokalise-api/issues"
Documentation = "https://python-lokalise-api.readthedocs.io/"

[dependency-groups]
dev = [
    "black>=25.9.0",
    "pyright>=1.1.405",
    "pytest>=8.4.2",
    "pytest-cov>=7.0.0",
    "pytest-vcr>=1.0.2",
    "python-dotenv>=1.1.1",
    "ruff>=0.13.1",
    "vcrpy>=7.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["lokalise"]
force-include = { "typings/lokalise" = "lokalise", "lokalise/py.typed" = "lokalise/py.typed" }

[tool.pytest.ini_options]
testpaths = ["tests"]
norecursedirs = ".git .github tmp* .eggs bin build include lib share src lokalise docs"
addopts = "-s --cov=lokalise --cov-report=term --cov-report=html"

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.ruff]
target-version = "py310"
line-length = 100
src = ["lokalise", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = []
fixable = ["ALL"]

[tool.pyright]
include = ["lokalise", "tests"]
exclude = [
  "**/dist/**",
  "**/build/**",
  "**/.eggs/**",
  "**/*.egg-info/**",
  "**/.venv/**",
  "**/__pycache__/**",
  "**/docs/_build/**",
  "tmp*"
]
ignore = ["**/dist/**"]
stubPath = "typings"
typeCheckingMode = "strict"
pythonVersion = "3.10"
reportMissingImports = true
reportMissingTypeStubs = "warning"
reportUnknownVariableType = "warning"
reportUnknownArgumentType = "warning"
reportUnknownMemberType = "warning"
reportUnusedImport = "warning"
