[check-manifest]
ignore =
  .travis.yml

[bdist_wheel]
universal=1

[metadata]
license_file = LICENSE

[tool:pytest]
testpaths = tests
norecursedirs = .git .github tmp* .eggs bin build include lib share src lokalise docs
addopts = -s --cov=lokalise --cov-report html --pylint

[pylint.MASTER]
min-public-methods=0
max-public-methods=100
min-similarity-lines=5
max-module-lines=1500
disable=E1136 # this gives a false positive with Python 3.9 https://github.com/PyCQA/pylint/issues/1498