[bdist_wheel]
universal=1

[metadata]
license_file = LICENSE

[tool:pytest]
testpaths = tests
norecursedirs = .git .github tmp* .eggs bin build include lib share src lokalise docs
addopts = -s --cov=lokalise --cov-report html --pylint

[pylint.MASTER]
min-public-methods=0
max-public-methods=150
min-similarity-lines=5
max-module-lines=2500
disable=W3101